# python-mecab-ko

./: pyproject.toml  setup.cfg
.github/workflows/: wheels.yml
mecab/: __init__.py
scripts/: cibw_before_all.sh  install_mecab_ko.py
