[build-system]
requires = ["setuptools>=42", "pybind11>=2.10.0"]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
build = "cp39-* cp310-* cp311-* cp312-* cp313-* cp314-*"
skip = "*-musllinux*"
test-skip = ["*-*linux_aarch64", "*-macosx_arm64 *-macosx_*_universal2", "*-win_arm64"]

[tool.cibuildwheel.macos]
archs = ["arm64"]

before-all = "bash scripts/cibw_before_all.sh {package}"
build-verbosity = 1

test-requires = ["pytest", "psutil"]
test-command = "pytest {project}/tests"


[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
known_first_party = "_mecab"